--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 body {
   padding: 0;
   margin: 0;
-  background: #f9ffc6;
+  background: #ffffe8;
   font-family: 'Poppins', sans-serif;
   text-align: center;
 }
@@ -14,13 +14,24 @@ h1 {
 .crosshair {
   position: absolute;
   display: none;
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   background: rgba(255, 255, 255, 0.644);
+  -webkit-box-shadow: 0px 0px 20px black;
+          box-shadow: 0px 0px 20px black;
   cursor: crosshair;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 100;
+}
+
+.crosshair img {
+  z-index: 199;
+  height: 600px;
+  width: 900px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
 }
 
 .frame {
