--- a/style/style.scss
+++ b/style/style.scss
@@ -3,7 +3,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: rgb(249, 255, 198);
+    background: rgb(255, 255, 232);
     font-family: 'Poppins', sans-serif;
     text-align: center;
 }
@@ -14,12 +14,21 @@ h1 {
 .crosshair {
     position: absolute;
     display: none;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     background: rgba(255, 255, 255, 0.644);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
     cursor: crosshair;
     transform: translate(-50%, -50%);
     z-index: 100;
+    img {
+        z-index: 199;
+        height: 600px;
+        width: 900px;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+    }
 }
 .frame {
     position: absolute;
