--- a/style/style.scss
+++ b/style/style.scss
@@ -6,10 +6,15 @@ body {
     background: rgb(255, 255, 232);
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    color: rgb(1, 1, 87);
 }
 
 h1 {
-    color: rgb(1, 1, 87);
+    font-size: 4em;
+}
+p {
+    transition: 0.2s;
+    opacity: 0;
 }
 .crosshair {
     position: absolute;
